samples/_failures_safe/1761318507_1b4bc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14d806fb.c: In function ‘main’:
./samples/SAFE/__tmp_14d806fb.c:180:16: error: missing terminating " character
  180 |         printf("%-
      |                ^~~
./samples/SAFE/__tmp_14d806fb.c:180:9: error: expected expression at end of input
  180 |         printf("%-
      |         ^~~~~~
./samples/SAFE/__tmp_14d806fb.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14d806fb.c:180:9: error: expected declaration or statement at end of input
